# amamentacao_django

./: .env.example  README.md  pyproject.toml
account_recovery/: views.py
accounts/: views.py
app/: asgi.py  settings.py  urls.py  wsgi.py
app/templates/: account_recovery.html  accounts.html  base.html  be_a_donor.html  feed.html  informations.html  login.html  profiles.html  settings.html  units.html
app/templatetags/: ensure_overridden.py
be_a_donor/: apps.py  views.py
feed/: views.py
informations/: views.py
login/: views.py
profiles/: admin.py  forms.py  models.py  views.py
profiles/migrations/: 0001_initial.py  0002_photo_delete_profile.py  0003_rename_photo_photos.py  0004_alter_photos_path_image.py  0005_rename_photos_photo.py  0006_address.py
settings/: views.py
static/css/: base.css  feed.css  profiles.css
static/js/: login.js  profile_upload.js
units/: views.py
